--- a/styles.css
+++ b/styles.css
@@ -74,10 +74,11 @@ body {
 .currentWeather {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
-	width: 200px;
+	align-items: flex-start;
+	justify-items: center;
+	width: 450px;
 	margin: 50%;
-	padding: 20px;
+	padding: 30px;
 	gap: 15px;
 	background-color: rgba(210, 224, 17, 0.486);
 	border-radius: 10px;
@@ -86,7 +87,7 @@ body {
 
 .currentWeather h2 {
 	font-weight: 500;
-	font-size: 18px;
+	font-size: 20px;
 	color: blueviolet;
 }
 
@@ -95,7 +96,26 @@ body {
 	color: black;
 }
 
-.currentWeather img {
+.icon-temp img {
 	width: 70px;
 	height: 70px;
 }
+
+.icon-temp p {
+	margin-left: 143%;
+	font-size: 90px;
+	margin-top: -53px;
+}
+
+.icon-temp {
+	display: flex;
+	flex-direction: row;
+	gap: 15%;
+}
+
+.currentWeather ul {
+	margin-left: 30%;
+    font-size: 20px;
+    margin-top: -92px;
+}
+
