--- a/styles.css
+++ b/styles.css
@@ -70,15 +70,15 @@ body {
 
 /* Widget Weather */
 
-
 .currentWeather {
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
 	justify-items: center;
 	width: 450px;
-	margin: 50%;
-	padding: 30px;
+	margin-left: 37%;
+	margin-top: 22%;
+	padding: 24px;
 	gap: 15px;
 	background-color: rgba(210, 224, 17, 0.486);
 	border-radius: 10px;
@@ -102,7 +102,7 @@ body {
 }
 
 .icon-temp p {
-	margin-left: 143%;
+	margin-left: 69%;
 	font-size: 90px;
 	margin-top: -53px;
 }
@@ -114,7 +114,7 @@ body {
 }
 
 .currentWeather ul {
-	margin-left: 30%;
+	margin-left: 25%;
     font-size: 20px;
     margin-top: -92px;
 }
