--- a/styles.css
+++ b/styles.css
@@ -119,3 +119,16 @@ body {
     margin-top: -92px;
 }
 
+.forecastWeather {
+	display: flex;
+	justify-content: center;
+	margin: 20px;
+	gap: 20px;
+}
+
+.forecastWeather div {
+	display: flex;
+    flex-direction: column;
+    align-items: center;
+	gap: 10px;
+}
