--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,13 @@ body {
 	font-weight: 300;
 }
 
+.main {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	min-height: 100vh;
+}
+
 /* Generador de contraseñas */
 
 .key-gen {
@@ -70,17 +77,25 @@ body {
 
 /* Widget Weather */
 
+.widget-weather {
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: column;
+	background-color: rgba(210, 224, 17, 0.486);
+	border-radius: 10px;
+	width: 630px;
+    height: 338px;
+}
+
 .currentWeather {
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
 	justify-items: center;
+	margin: unset;
 	width: 450px;
-	margin-left: 37%;
-	margin-top: 22%;
 	padding: 24px;
 	gap: 15px;
-	background-color: rgba(210, 224, 17, 0.486);
 	border-radius: 10px;
 
 }
@@ -96,39 +111,46 @@ body {
 	color: black;
 }
 
+.icon-temp {
+	display: flex;
+	flex-direction: row;
+	gap: 123%;
+}
 .icon-temp img {
 	width: 70px;
 	height: 70px;
 }
 
 .icon-temp p {
-	margin-left: 69%;
 	font-size: 90px;
-	margin-top: -53px;
-}
-
-.icon-temp {
-	display: flex;
-	flex-direction: row;
-	gap: 15%;
+	margin-top: -27px;
 }
 
 .currentWeather ul {
-	margin-left: 25%;
-    font-size: 20px;
-    margin-top: -92px;
+	margin-left: 31%;
+	font-size: 20px;
+	margin-top: -92px;
 }
 
 .forecastWeather {
 	display: flex;
-	justify-content: center;
-	margin: 20px;
-	gap: 20px;
+	overflow-x: scroll;
+	scrollbar-width: thin;
+	margin: auto;
+	width: 588px;
 }
 
-.forecastWeather div {
+
+.forecastWeather li {
 	display: flex;
     flex-direction: column;
     align-items: center;
 	gap: 10px;
 }
+
+/*
+overflow-x: scroll;
+
+	scrollbar-color: rgba(210, 224, 17, 0.486);
+	scrollbar-width: thin;
+*/
