--- a/styles.css
+++ b/styles.css
@@ -65,8 +65,14 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+	background-color: rgba(210, 224, 17, 0.486);
+	border-radius: 10px;
+	padding: 30px;
     gap: 20px;
-    margin-top: 20%;
+}
+
+.title {
+	font-size: 20px;
 }
 
 .form {
@@ -97,7 +103,6 @@ body {
 	padding: 24px;
 	gap: 15px;
 	border-radius: 10px;
-
 }
 
 .currentWeather h2 {
@@ -148,9 +153,22 @@ body {
 	gap: 10px;
 }
 
-/*
-overflow-x: scroll;
+/* LISTADO DE ENLACES */
 
-	scrollbar-color: rgba(210, 224, 17, 0.486);
-	scrollbar-width: thin;
-*/
+
+
+.linkForm {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	gap: 20px;
+}
+
+#inputTitle {
+	width: 300px;
+}
+
+#inputURL {
+	width: 300px;
+}
