--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,25 @@ body {
 	transition: all 1s ease;
 }
 
+.header a {
+	display: flex;
+	position: fixed;
+	top: 20px;
+	left: 20px;
+	gap: 10px;
+	color: black;
+	filter: invert(1);
+	text-decoration: none;
+}
+
+.header a img {
+	width: 25px;
+}
+
+.header a h2 {
+	font-weight: 500;
+}
+
 .main {
 	display: flex;
 	align-items: center;
@@ -64,8 +83,13 @@ body {
 }
 
 footer nav {
-	background-color: red;
-	color: rgb(40, 238, 109);
+	display: flex;
+	justify-content: center;
+	color: black;
+	filter: invert(1);
+	text-decoration: none;
+	gap: 30px;
+    margin: 20px;
 }
 
 /* Generador de contraseñas */
@@ -74,23 +98,56 @@ footer nav {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-	background-color: rgba(210, 224, 17, 0.486);
-	border-radius: 10px;
-	padding: 30px;
-    gap: 20px;
-	width: 650px;
-    height: 235px;
+	background-color: #33333393;
+	border-radius: 20px;
+	padding: 18px;
+    gap: 10px;
+	width: 394px;
+    height: 110px;
 }
 
 .title {
-	font-size: 20px;
+	font-size: 21px;
+	font-weight: bolder;
+	color: white;
+	padding-bottom: 10px;
 }
 
 .form {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     gap: 20px;
+}
+
+.form label {
+	color: white;
+	font-size: 14px;
+	font-weight: normal;
+	padding-top: 10px;
+}
+
+.form input {
+	font-size: 14px;
+	width: 40px;
+	padding: 6px;
+	border-radius: 5px;
+	border: none;
+}
+
+.form button {
+	font-size: 12px;
+	color: white;
+    width: 150px;
+	padding: 10px;
+    background-color: rgb(40, 238, 109);
+    border-radius: 5px;
+	border: none;
+}
+
+.result {
+	font-size: 16px;
+    font-weight: bold;
+	color: #2196f3;
 }
 
 /* Widget Weather */
@@ -99,7 +156,7 @@ footer nav {
 	display: flex;
 	flex-wrap: wrap;
 	flex-direction: column;
-	background-color: rgba(210, 224, 17, 0.486);
+	background-color: #33333393;
 	border-radius: 10px;
 	width: 630px;
     height: 338px;
@@ -109,51 +166,59 @@ footer nav {
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
-	justify-items: center;
-	margin: unset;
 	width: 450px;
 	padding: 24px;
 	gap: 15px;
-	border-radius: 10px;
 }
 
 .currentWeather h2 {
-	font-weight: 500;
+	font-weight: normal;
 	font-size: 20px;
-	color: blueviolet;
+	color: white;
 }
 
 .currentWeather p {
-	font-size: 16px;
-	color: black;
+	font-size: 18px;
+	font-weight: bolder;
+	color: rgb(40, 238, 109);
 }
 
 .icon-temp {
 	display: flex;
 	flex-direction: row;
-	gap: 123%;
+	justify-content: space-around;
+	align-items: flex-end;
 }
 .icon-temp img {
 	width: 70px;
 	height: 70px;
+	padding-left: 200px;
 }
 
 .icon-temp p {
+	color: rgb(40, 238, 109);
 	font-size: 90px;
-	margin-top: -27px;
+	font-weight: bolder;
+	min-width: 170px;
+	padding-left: 70px;
 }
 
 .currentWeather ul {
-	margin-left: 31%;
-	font-size: 20px;
+	color: white;
+	font-size: 16px;
+	font-weight: normal;
 	margin-top: -92px;
+}
+
+.currentWeather ul li {
+	padding-bottom: 5px;
 }
 
 .forecastWeather {
 	display: flex;
 	overflow-x: scroll;
 	scrollbar-width: thin;
-	margin: auto;
+	margin-left: 20px;
 	width: 588px;
 }
 
@@ -162,31 +227,95 @@ footer nav {
 	display: flex;
     flex-direction: column;
     align-items: center;
-	gap: 10px;
+	gap: 5px;
+	padding-bottom: 10px;
+}
+
+.forecastWeather li p {
+	color: white;
+	font-weight: normal;
 }
 
 /* LISTADO DE ENLACES */
 
+.linkForm {
+	display: grid;
+    place-items: center;
+    height: 100vh;
+}
+
 .link-container {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+	align-items: flex-start;
 	justify-content: center;
+	padding: 20px;
 	gap: 20px;
+	border-radius: 20px;
+}
+
+.link-title {
+	font-size: 20px;
+	font-weight: bold;
+	color: white;
 }
 
 .link-input {
 	display: flex;
 	flex-direction: column;
-	gap: 20px;
+	margin-bottom: 20px;
 }
 
 #inputTitle {
 	width: 300px;
+	margin-bottom: 10px;
+	padding: 10px;
+	border-radius: 5px;
+	border: none;
 }
 
 #inputURL {
 	width: 300px;
+	padding: 10px;
+	margin-bottom: 20px;
+	border: none;
+	border-radius: 5px;
+}
+
+.link-input button {
+	color: white;
+	padding: 10px;
+	border: none;
+	border-radius: 5px;
+	background-color: rgb(40, 238, 109);
+	cursor: pointer;
+}
+
+.list-url {
+	display: flex;
+	flex-wrap: wrap;
+	width: 320px;
+	height: 400px;
+	margin-bottom: 10px;
+	gap: 20px;
+}
+
+.list-url li {
+	position: relative;
+	display: flex;
+	align-items: center;
+	min-width: 93px;
+	height: 40px;
+	border-radius: 5px;
+	background-color: #683ab7a4;
+	padding: 10px;
+	gap: 10px;
+}
+
+.list-url li a {
+	text-decoration: none;
+	color: white;
+	#673ab7
 }
 
 /* RELOJ DIGITAL */
@@ -203,25 +332,30 @@ footer nav {
 	align-items: center;
 	justify-content: center;
 	padding: 20px;
-	width: 350px;
-	height: 200px;
-	gap: 20px;
-	background-color: rgba(0, 0, 0, 0.355);
-	border-radius: 10px;
+	width: 320px;
+	height: 150px;
+	background-color: #33333393;
+	border-radius: 20px;
 }
 
 .clock {
-	font-size: 60px;
-	font-weight: 400;
+	font-size: 56px;
+	font-weight: bold;
+	padding-bottom: 10px;
 	color: rgb(40, 238, 109);
 }
 
 .date {
-	font-size: 26px;
+	font-size: 24px;
+	font-weight: normal;
+	padding-bottom: 10px;
 	color: white;
 }
 
 .tip {
 	font-size: 16px;
-	color: rgb(40, 238, 109);
+	font-weight: bold;
+	text-align: center;
+	padding-top: 5px;
+	color: #2196f3;
 }
