--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,15 @@ footer nav {
     margin: 20px;
 }
 
+/* Dashboard */
+
+.main-index {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
+	margin-top: 30px;
+}
+
 /* Generador de contraseñas */
 
 .key-gen {
@@ -158,7 +167,7 @@ footer nav {
 	flex-direction: column;
 	background-color: #33333393;
 	border-radius: 10px;
-	width: 630px;
+	width: 491px;
     height: 338px;
 }
 
@@ -192,7 +201,7 @@ footer nav {
 .icon-temp img {
 	width: 70px;
 	height: 70px;
-	padding-left: 200px;
+	padding-left: 160px;
 }
 
 .icon-temp p {
@@ -200,7 +209,7 @@ footer nav {
 	font-size: 90px;
 	font-weight: bolder;
 	min-width: 170px;
-	padding-left: 70px;
+	padding-left: 40px;
 }
 
 .currentWeather ul {
@@ -219,7 +228,7 @@ footer nav {
 	overflow-x: scroll;
 	scrollbar-width: thin;
 	margin-left: 20px;
-	width: 588px;
+	width: 449px;
 }
 
 
@@ -241,7 +250,7 @@ footer nav {
 .linkForm {
 	display: grid;
     place-items: center;
-    height: 100vh;
+	margin-top: 30px;
 }
 
 .link-container {
@@ -249,6 +258,8 @@ footer nav {
 	flex-direction: column;
 	align-items: flex-start;
 	justify-content: center;
+	overflow-x: scroll;
+	scrollbar-width: thin;
 	padding: 20px;
 	gap: 20px;
 	border-radius: 20px;
@@ -294,7 +305,7 @@ footer nav {
 .list-url {
 	display: flex;
 	flex-wrap: wrap;
-	width: 320px;
+	width: 300px;
 	height: 400px;
 	margin-bottom: 10px;
 	gap: 20px;
@@ -315,7 +326,10 @@ footer nav {
 .list-url li a {
 	text-decoration: none;
 	color: white;
-	#673ab7
+}
+
+.list-url li button {
+	border: none;
 }
 
 /* RELOJ DIGITAL */
